# raytracing-realtime-approximation

./: .gitignore  CMakeLists.txt  README.md
OpenGL Application/OpenGL Application/: App.cpp  Model.cpp  Model.h  OpenGL Application.vcxproj  OpenGL Application.vcxproj.filters  Skybox.cpp  Skybox.h  backface.fs  backface.vs  frontface.fs  frontface.vs  objloader.cpp  objloader.hpp  skybox.vs
assets/models/: diamond2.mtl
include/: App.h  GLSLProgram.h  Model.h  OBJLoader.h
src/cpp/: App.cpp  Model.cpp  OBJLoader.cpp
src/glsl/: backface.fs  backface.vs  frontface.fs  frontface.vs  metal.fs  metal.vs  skybox.fs
